--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,9 @@ body {min-width: 500px;}
             border-radius: 10px;
     z-index: 9999;
 }
+.panel.filters {
+    bottom: 45px;
+}
 
 .panel.details {
     left: 1em;
@@ -92,15 +95,10 @@ body {min-width: 500px;}
     display: block;
 }
 
-#additional-actions {
-    text-align: right;
-    margin-top: 20px;
-}
 
 #additional-actions.panel {
     bottom: 20px;
     right: 1em;
-    z-index: 9999;
 }
 
 
@@ -159,7 +157,7 @@ button.link.btn-large {
 }
 
 button.link.btn-small {
-    padding: 4px 12px;
+    padding: 6px 12px 4px;
     line-height: 1;
     font-size: 10px;
     font-weight: 700;
@@ -795,11 +793,13 @@ header button.link:hover {
     position: relative;
     width: 100%;
     max-height: 340px;
-    padding: 5px;
+    padding: 0 5px;
     overflow: auto;
     overflow-x: hidden;
     background: #fff;
     z-index: 9999;
+    border-bottom: 5px solid #fff;
+    border-top: 5px solid #fff;
 
     -webkit-border-radius: 5px;
             border-radius: 5px;
