--- a/css/main.css
+++ b/css/main.css
@@ -311,10 +311,10 @@ button.selected,
 
 .filter-row li.filter-reset.selected:after,
 .filter-row li.filter-reset:hover:after {background: #b2b6b7 !important;}
-.filter-row li.filter-implemented:after {background: #80c0ff;}
-.filter-row li.filter-underway:after {background: #91d3ff;}
-.filter-row li.filter-pre-planning:after {background: #9ee2ff;}
-.filter-row li.filter-stalled:after {background: #b3f2ff;}
+.filter-row li.filter-implemented:after {background: #78dbba;}
+.filter-row li.filter-underway:after {background: #192ea8;}
+.filter-row li.filter-pre-planning:after {background: #fa71e8;}
+.filter-row li.filter-stalled:after {background: #d93b52;}
 
 
 /* tabs */
