--- a/css/main.css
+++ b/css/main.css
@@ -313,7 +313,7 @@ button.selected,
 .filter-row li.filter-reset:hover:after {background: #b2b6b7 !important;}
 .filter-row li.filter-implemented:after {background: #78dbba;}
 .filter-row li.filter-underway:after {background: #192ea8;}
-.filter-row li.filter-pre-planning:after {background: #fa71e8;}
+.filter-row li.filter-pre-planning:after {background: #f59918;}
 .filter-row li.filter-stalled:after {background: #d93b52;}
 
 
